# qpdf

./: .clang-format  .dir-locals.el  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  Artistic-2.0  CMakeLists.txt  CMakePresets.json  ChangeLog  Dockerfile  Dockerfile.dev  INSTALL  Makefile  NOTICE.md  README  README-appimage.md  README-developer.md  README-doc.txt  README-docker.md  README-emscripten.md  README-hardening.md  README-maintainer  README-maintainer.md  README-what-to-download.md  README-what-to-download.txt  README-windows-install.txt  README-windows.md  README-windows.txt  README.maintainer  README.md  README.windows  TODO  TODO-pages.md  TODO.md  abi-perf-test  aclocal.m4  autoconf.mk.in  autofiles.sums  autogen.sh  (+36 more)
compare-for-test/: CMakeLists.txt  compare.testcov  qpdf-test-compare.cc
compare-for-test/qtest/: compare.test
examples/: CMakeLists.txt  build.mk  double-page-size.cc  examples.testcov  extend-c-api-impl.cc  extend-c-api.c  extend-c-api.h  pdf-attach-file.cc  pdf-bookmarks.cc  pdf-c-objects.c  pdf-count-strings.cc  pdf-create.cc  pdf-custom-filter.cc  pdf-double-page-size.cc  pdf-filter-tokens.cc  pdf-invert-images.cc  pdf-job.cc  pdf-linearize.c  pdf-mod-info.cc  pdf-name-number-tree.cc  pdf-npages.cc  pdf-overlay-page.cc  pdf-parse-content.cc  pdf-rotate.cc  pdf-set-form-values.cc  pdf-split-pages.cc  qpdf-job.cc  qpdfjob-c-save-attachment.c  qpdfjob-c.c  qpdfjob-remove-annotations.cc  qpdfjob-remove-js-action.cc  qpdfjob-save-attachment.cc
examples/qpdf-js/: qpdf-worker.js  qpdf.js  serve.py  serve.sh  test.html
examples/qtest/: attach-file.test  bookmarks.test  c-objects.test  count-strings.test  create.test  custom-filter.test  double-page-size.test  extend-c-api.test  filter-tokens.test  invert-images.test  linearize.test  mod-info.test  name-number-tree.test  npages.test  overlay-page.test  parse-content.test  pdf-split-pages.test  qpdf-job.test  qpdfjob-c.test  qpdfjob-remove-annotations.test  save-attachment.test  set-form-values.test
external-libs/pcre/: Abuild.conf  Abuild.interface  Abuild.mk  Makefile.in  RunTest.in  config.h  config.in  configure  configure.in  internal.h  pcre.h  pcre.in  pcredemo.c  printint.c
fuzz/: CMakeLists.txt  README.md  ascii85_fuzzer.cc  build.mk  dct_fuzzer.cc  flate_fuzzer.cc  get_sha1  hex_fuzzer.cc  json_fuzzer.cc  lzw_fuzzer.cc  oss-fuzz-build  pngpredictor_fuzzer.cc  qpdf_annot_fuzzer.cc  qpdf_annot_fuzzer.dict  qpdf_crypt_fuzzer.cc  qpdf_crypt_insecure_fuzzer.cc  qpdf_embed_fuzzer.cc  qpdf_embed_fuzzer.options  qpdf_fuzzer.cc  qpdf_job_fuzzer.cc  qpdf_job_fuzzer.dict  qpdf_job_fuzzer.options  qpdf_lin_fuzzer.cc  qpdf_linearization_fuzzer.cc  qpdf_object_fuzzer.cc  qpdf_outlines_fuzzer.cc  qpdf_page_fuzzer.cc  qpdf_pages_fuzzer.cc  qpdf_pages_fuzzer.options  qpdf_read_memory_fuzzer.cc  qpdf_transform_fuzzer.cc  qpdf_transform_fuzzer.options  runlength_fuzzer.cc  standalone_fuzz_target_runner.cc  tiffpredictor_fuzzer.cc
fuzz/qpdf_extra/: 15316.fuzz  15390.fuzz  16172.fuzz  16301.fuzz  17630a.fuzz  17630b.fuzz  18241.fuzz  18247.fuzz  23172.fuzz  23599.fuzz  23642-mod.fuzz  30507.fuzz  369662293a.fuzz  376305073.fuzz  376305073a.fuzz  37740.fuzz  377977949.fuzz  388571629.fuzz  389974979.fuzz  391974927.fuzz  394129398.fuzz  409905355.fuzz  440599107.fuzz  440747125.fuzz  4720043549327360.fuzz  4876793183272960.fuzz  5109284021272576.fuzz  5828408539152384.fuzz  6310410941956096.fuzz  6322553212960768.fuzz  65681.fuzz  65773.fuzz  65777.fuzz  68374.fuzz  68377.fuzz  68668.fuzz  69977c.fuzz  69977d.fuzz  71689.fuzz  99999a.fuzz  (+4 more)
fuzz/qtest/: fuzz.test
include/: CMakeLists.txt
include/qpdf/: Buffer.hh  BufferInputSource.hh  ClosedFileInputSource.hh  Constants.h  DLL.h  DLL.hh  FileInputSource.hh  InputSource.hh  JSON.hh  JSONHandler.hh  ObjectHandle.hh  PDFVersion.hh  Pipeline.hh  Pl_Buffer.hh  Pl_Concatenate.hh  Pl_Count.hh  Pl_DCT.hh  Pl_Discard.hh  Pl_Flate.hh  Pl_Function.hh  Pl_OStream.hh  Pl_QPDFTokenizer.hh  Pl_RunLength.hh  Pl_StdioFile.hh  Pl_String.hh  PointerHolder.hh  QEXC.hh  QIntC.hh  QPDF.hh  QPDFAcroFormDocumentHelper.hh  QPDFAnnotationObjectHelper.hh  QPDFArgParser.hh  QPDFCryptoImpl.hh  QPDFCryptoProvider.hh  QPDFDocumentHelper.hh  QPDFEFStreamObjectHelper.hh  QPDFEmbeddedFileDocumentHelper.hh  QPDFEquivalenceCache.hh  QPDFExc.hh  QPDFExplicitDestinationObjectHelper.hh  (+47 more)
libqpdf/: AES_PDF_native.cc  BitStream.cc  BitWriter.cc  Buffer.cc  BufferInputSource.cc  CMakeLists.txt  ClosedFileInputSource.cc  ContentNormalizer.cc  CryptoRandomDataProvider.cc  FileInputSource.cc  InputSource.cc  InsecureRandomDataProvider.cc  JSON.cc  JSONHandler.cc  MD5-gnutls.cc  MD5.cc  MD5_native.cc  NNTree.cc  OHArray.cc  OffsetInputSource.cc  PCRE.cc  PDFVersion.cc  Pipeline.cc  Pl_AES_PDF-gnutls.cc  Pl_AES_PDF.cc  Pl_ASCII85Decoder.cc  Pl_ASCIIHexDecoder.cc  Pl_Base64.cc  Pl_Buffer.cc  Pl_Concatenate.cc  Pl_Count.cc  Pl_DCT.cc  Pl_Discard.cc  Pl_Flate.cc  Pl_Function.cc  Pl_LZWDecoder.cc  Pl_MD5.cc  Pl_OStream.cc  Pl_PNGFilter.cc  Pl_QPDFTokenizer.cc  (+98 more)
libqpdf/qpdf/: AES_PDF_native.hh  AcroForm.hh  (+90 more)
libtests/: CMakeLists.txt  Makefile  aes.cc  arg_parser.cc  ascii85.cc  base64.cc  bits.cc  buffer.cc  build.mk  closed_file_input_source.cc  concatenate.cc  crypto_provider.cc  cxx11.cc  dct_compress.cc  dct_uncompress.cc  dedupe.cc  destinations.cc  equivalence.cc  flate.cc  global.cc  hex.cc  input_source.cc  json.cc  json_handler.cc  json_parse.cc  libtests.testcov  logger.cc  logger_c.c  lzw.cc  main_from_wmain.cc  main_from_wmain_12.cc  matrix.cc  md5.cc  nntree.cc  numrange.cc  obj_table.cc  objects.cc  pcre.cc  pdf_version.cc  pl_function.cc  (+14 more)
qpdf/: CMakeLists.txt  build.mk  fix-qdf  fix-qdf.cc  pdf_from_scratch.cc  qpdf-ctest.c  qpdf.cc  qpdf.testcov  qpdfjob-ctest.c  sizes.cc  test_char_sign.cc  test_driver.cc  test_large_file.cc  test_many_nulls.cc  test_parsedoffset.cc  test_pdf_doc_encoding.cc  test_pdf_unicode.cc  test_renumber.cc  test_shell_glob.cc  test_tokenizer.cc  test_unicode_filenames.cc  test_xref.cc
zlib-flate/: CMakeLists.txt  build.mk  zlib-flate.cc
(+1656 files in other folders)
